--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <header>
     <div class="container">
       <div class="header-left">
-        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
@@ -81,8 +80,7 @@
     </div>
   </div>
   <footer>
-    <div class="container">
-      <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
+    <div class="container"
       <p>Learn to Code, Learn to be Creative.</p>
     </div>
   </footer>
