--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
    <img src="IMG_0286.jpeg">
-  <p><img src="IMG_0286.jpeg alt="IMG_0286.jpeg" width="70" height="70"> 縮小</p>
+ <p><img src="IMG_0286.jpeg" alt="写真" width="96" height="65"> 縮小</p>
 </head>
 <body>
   <header>
