--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>VetRes&MedRes</title>
  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
-   <img src="IMG_0286.jpeg" width="96" height="65">
+   <img src="IMG_0286.jpeg" alt="写真" width="96" height="65">
 </head>
 <body>
   <header>
