--- a/index.html
+++ b/index.html
@@ -1,85 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VetRes&MedRes</title>
- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-</head>
-<body>
-   <img src="IMG_0286.jpeg" alt="写真" width="96" height="80">
-  <header>
-    <div class="container">
-      <div class="header-left">
-      </div>
-      <span class="fa fa-bars menu-icon"></span>
-      <div class="header-right">
-        <a href="#">専門家の方</a>
-        <a href="#">企業の方</a>
-        <a href="#" class="login">ログイン</a>
-      </div>
-    </div>
-  </header>
-  <div class="top-wrapper">
-    <div class="container">
-      <h1>すべての動物と人の健康のために<br>BE CREATIVE.</h1>
-      <p>VetRes＆MedResはヘルスケア企業と専門家を結ぶマッチングサイトです<br>臨床経験や知識豊富な獣医師が動物関連サービスやペット製品の開発をサポートします。</p>
-      <div class="btn-wrapper">
-        <a href="#" class="btn signup">新規登録はこちら</a>
-        <p>or</p>
-        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
-        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
-      </div>
-    </div>
-  </div>
-  <div class="lesson-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h2>Learn Where to Get Started!</h2>
-      </div>
-      <div class="lessons">
-        <div class="lesson">
-          <div class="lesson-icon">
-            <p>獣医師にできること</p>
-          </div>
-          <p class="text-contents">ペットフードなどの製品開発の学術的サポート</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-            <p>獣医師にできること２</p>
-          </div>
-          <p class="text-contents">ペット関連記事の作成や監修を行います。査読付き論文や科学的知見に支えられた確かな知識で質の高い内容をお約束します。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-           <p>今後の展望</p>
-          </div>
-          <p class="text-contents">医師や薬剤師などのヘルスケア 領域にもチャレンジします。</p>
-        </div>
-        <div class="lesson">
-          <div class="lesson-icon">
-           <p>なぜ専門家が必要なの？</p>
-          </div>
-          <p class="text-contents">常に最新の科学的知見を取り入れる必要があります。</p>
-        </div>
-      </div>
-      <div class="clear"></div>
-    </div>
-  </div>
-  <div class="message-wrapper">
-    <div class="container">
-      <div class="heading">
-        <h2>専門家と企業が組むことですべての人と動物の健康社会を実現します。</h2>
-        <h3>常に研鑽を忘れない専門家と、科学的に正しいもの・ことを発信したいすべての企業に</h3>
-      </div>
-      <span class="btn message">さっそく登録する</span>
-    </div>
-  </div>
-  <footer>
-    <div class="container"
-      <p>すべての人と動物の健康社会を実現するために</p>
-    </div>
-  </footer>
-</body>
+<h2>VetRes&MedResは医療系専門家が企業を学術的に支援するための場所です<h2>
+   <p>すべての健康サービスは有資格者によって学術的にきちんと効果が証明されているものかどうか検証を受けるべきです。</p>
+   
 </html>
